[gd_scene load_steps=48 format=3 uid="uid://cp2fqy02him1l"]

[ext_resource type="PackedScene" uid="uid://dtyu2t5hq40nc" path="res://Scenes/DefenceTowers/ArcherTowers/archer_tower.tscn" id="1_7pclo"]
[ext_resource type="Script" path="res://Scripts/Datas/TowerData.gd" id="2_rwawm"]
[ext_resource type="Texture2D" uid="uid://nvqsr0qhnwil" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_00.png" id="2_s0w53"]
[ext_resource type="Texture2D" uid="uid://bj63ufnn4ccg7" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_00.png" id="3_wvvn8"]
[ext_resource type="Texture2D" uid="uid://b8nvtucc4pxgf" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_01.png" id="4_e2yky"]
[ext_resource type="Texture2D" uid="uid://de75bh6081kb1" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_02.png" id="5_ulo4a"]
[ext_resource type="Texture2D" uid="uid://5e6l0umj4vxn" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_03.png" id="6_t3d2t"]
[ext_resource type="Texture2D" uid="uid://b5x6uiysv0k0" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_04.png" id="7_12wld"]
[ext_resource type="Texture2D" uid="uid://b8jaycj3y2rv8" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_05.png" id="8_2cgmh"]
[ext_resource type="Texture2D" uid="uid://dlsudlhxx6mgt" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_06.png" id="9_05j4r"]
[ext_resource type="Texture2D" uid="uid://bmoxr5wfb5jt1" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_07.png" id="10_cvsen"]
[ext_resource type="Texture2D" uid="uid://cbq787vvl311r" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_08.png" id="11_cv8vu"]
[ext_resource type="Texture2D" uid="uid://ca0ycpsxqe7n3" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_09.png" id="12_y0ii5"]
[ext_resource type="Texture2D" uid="uid://csguljjpb2de1" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_10.png" id="13_atqo5"]
[ext_resource type="Texture2D" uid="uid://b2kb8ywvui42e" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_11.png" id="14_la0qs"]
[ext_resource type="Texture2D" uid="uid://dl2juxjl1acld" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_12.png" id="15_yl8g3"]
[ext_resource type="Texture2D" uid="uid://d0plkjn0i2848" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_13.png" id="16_4g7fd"]
[ext_resource type="Texture2D" uid="uid://bx7p7dg7etk2r" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_14.png" id="17_rgko4"]
[ext_resource type="Texture2D" uid="uid://b7lgijspdxfun" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_15.png" id="18_2ju5s"]
[ext_resource type="Texture2D" uid="uid://dk1c5p3qrcer4" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_16.png" id="19_ay06j"]
[ext_resource type="Texture2D" uid="uid://dlvjcp27efihf" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_17.png" id="20_7faxw"]
[ext_resource type="Texture2D" uid="uid://fxryyak4oqvy" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_18.png" id="21_xkiui"]
[ext_resource type="Texture2D" uid="uid://cb4l3jdnk8ia4" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_19.png" id="22_leqdi"]
[ext_resource type="Texture2D" uid="uid://dme2ocvynm0k3" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Back_20.png" id="23_txgfw"]
[ext_resource type="Texture2D" uid="uid://dyp0eulbuv4oc" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_01.png" id="24_rdfxq"]
[ext_resource type="Texture2D" uid="uid://bfi5eymxjmgsp" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_02.png" id="25_h3siw"]
[ext_resource type="Texture2D" uid="uid://cbfk50dmr38xb" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_03.png" id="26_bylhk"]
[ext_resource type="Texture2D" uid="uid://dtbd6siiu0rqq" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_04.png" id="27_mvsxu"]
[ext_resource type="Texture2D" uid="uid://brljqh41kxk8f" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_05.png" id="28_3t51u"]
[ext_resource type="Texture2D" uid="uid://bn8l28hnjla5q" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_06.png" id="29_014wg"]
[ext_resource type="Texture2D" uid="uid://b2acjx4lrhsdg" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_07.png" id="30_lfnix"]
[ext_resource type="Texture2D" uid="uid://dh7uyujk603ga" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_08.png" id="31_ebwpd"]
[ext_resource type="Texture2D" uid="uid://dxalibyjxjket" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_09.png" id="32_2308b"]
[ext_resource type="Texture2D" uid="uid://dm4fa0ve4ityq" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_10.png" id="33_ww8aq"]
[ext_resource type="Texture2D" uid="uid://b7cvleqofdxp3" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_11.png" id="34_bh4p4"]
[ext_resource type="Texture2D" uid="uid://um8uplxhxg5t" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_12.png" id="35_vrg6f"]
[ext_resource type="Texture2D" uid="uid://dshj3xo5uphsd" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_13.png" id="36_envwq"]
[ext_resource type="Texture2D" uid="uid://cyd0mfa7dx564" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_14.png" id="37_f8ael"]
[ext_resource type="Texture2D" uid="uid://dsy8xovlu3sni" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_15.png" id="38_581xb"]
[ext_resource type="Texture2D" uid="uid://bttd6oxhvxnxq" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_16.png" id="39_ryjb2"]
[ext_resource type="Texture2D" uid="uid://ligaubd6tjgc" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_17.png" id="40_xv4lu"]
[ext_resource type="Texture2D" uid="uid://d2o4d1en1hy43" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_18.png" id="41_88rxe"]
[ext_resource type="Texture2D" uid="uid://ddgex24hqky5y" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_19.png" id="42_srxyc"]
[ext_resource type="Texture2D" uid="uid://csa4j386lknfj" path="res://Assets/Animations/Archers/LV3/ArcherLV3-Front_20.png" id="43_v4ef8"]
[ext_resource type="Script" path="res://Scripts/DefenceTowers/ArcherTowers/shooter.gd" id="44_oi6rr"]

[sub_resource type="Resource" id="Resource_ro6nh"]
script = ExtResource("2_rwawm")
damage_low = 8
damage_high = 12
attack_speed = 0.8

[sub_resource type="SpriteFrames" id="SpriteFrames_h0hv6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_s0w53")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wvvn8")
}, {
"duration": 1.0,
"texture": ExtResource("4_e2yky")
}, {
"duration": 1.0,
"texture": ExtResource("5_ulo4a")
}, {
"duration": 1.0,
"texture": ExtResource("6_t3d2t")
}, {
"duration": 1.0,
"texture": ExtResource("7_12wld")
}, {
"duration": 1.0,
"texture": ExtResource("8_2cgmh")
}, {
"duration": 1.0,
"texture": ExtResource("9_05j4r")
}, {
"duration": 1.0,
"texture": ExtResource("10_cvsen")
}, {
"duration": 1.0,
"texture": ExtResource("11_cv8vu")
}, {
"duration": 1.0,
"texture": ExtResource("12_y0ii5")
}, {
"duration": 1.0,
"texture": ExtResource("13_atqo5")
}, {
"duration": 1.0,
"texture": ExtResource("14_la0qs")
}, {
"duration": 1.0,
"texture": ExtResource("15_yl8g3")
}, {
"duration": 1.0,
"texture": ExtResource("16_4g7fd")
}, {
"duration": 1.0,
"texture": ExtResource("17_rgko4")
}, {
"duration": 1.0,
"texture": ExtResource("18_2ju5s")
}, {
"duration": 1.0,
"texture": ExtResource("19_ay06j")
}, {
"duration": 1.0,
"texture": ExtResource("20_7faxw")
}, {
"duration": 1.0,
"texture": ExtResource("21_xkiui")
}, {
"duration": 1.0,
"texture": ExtResource("22_leqdi")
}, {
"duration": 1.0,
"texture": ExtResource("23_txgfw")
}],
"loop": false,
"name": &"shoot_back",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_s0w53")
}, {
"duration": 1.0,
"texture": ExtResource("24_rdfxq")
}, {
"duration": 1.0,
"texture": ExtResource("25_h3siw")
}, {
"duration": 1.0,
"texture": ExtResource("26_bylhk")
}, {
"duration": 1.0,
"texture": ExtResource("27_mvsxu")
}, {
"duration": 1.0,
"texture": ExtResource("28_3t51u")
}, {
"duration": 1.0,
"texture": ExtResource("29_014wg")
}, {
"duration": 1.0,
"texture": ExtResource("30_lfnix")
}, {
"duration": 1.0,
"texture": ExtResource("31_ebwpd")
}, {
"duration": 1.0,
"texture": ExtResource("32_2308b")
}, {
"duration": 1.0,
"texture": ExtResource("33_ww8aq")
}, {
"duration": 1.0,
"texture": ExtResource("34_bh4p4")
}, {
"duration": 1.0,
"texture": ExtResource("35_vrg6f")
}, {
"duration": 1.0,
"texture": ExtResource("36_envwq")
}, {
"duration": 1.0,
"texture": ExtResource("37_f8ael")
}, {
"duration": 1.0,
"texture": ExtResource("38_581xb")
}, {
"duration": 1.0,
"texture": ExtResource("39_ryjb2")
}, {
"duration": 1.0,
"texture": ExtResource("40_xv4lu")
}, {
"duration": 1.0,
"texture": ExtResource("41_88rxe")
}, {
"duration": 1.0,
"texture": ExtResource("42_srxyc")
}, {
"duration": 1.0,
"texture": ExtResource("43_v4ef8")
}],
"loop": false,
"name": &"shoot_front",
"speed": 45.0
}]

[node name="WallArhcer" node_paths=PackedStringArray("shooter_list") instance=ExtResource("1_7pclo")]
start_data = SubResource("Resource_ro6nh")
shooter_list = [NodePath("TowerSprite/Shooter")]
tower_name = "帝国弓箭手"
start_tower_range = 600

[node name="Based" parent="." index="0"]
visible = false

[node name="TowerButton" parent="." index="2"]
visible = false

[node name="Shooter" type="AnimatedSprite2D" parent="TowerSprite" index="0" node_paths=PackedStringArray("tower")]
z_index = 1
position = Vector2(-1, -19)
sprite_frames = SubResource("SpriteFrames_h0hv6")
animation = &"shoot_front"
autoplay = "idle_front"
script = ExtResource("44_oi6rr")
tower = NodePath("../..")
summon_frame = 16

[node name="FrontNoFlip" type="Marker2D" parent="TowerSprite/Shooter" index="0"]
position = Vector2(10, -13)

[node name="FrontFlip" type="Marker2D" parent="TowerSprite/Shooter" index="1"]
position = Vector2(-10, -13)

[node name="BackFlip" type="Marker2D" parent="TowerSprite/Shooter" index="2"]
position = Vector2(-5, -20)

[node name="BackNoFlip" type="Marker2D" parent="TowerSprite/Shooter" index="3"]
position = Vector2(5, -20)
